Add landing show path
