# app/controllers/api/v1/landings/landings_controller.rb
@@ -1,13 +1,17 @@
 class Api::V1::Landings::LandingsController < Api::V1::BaseController
   def index
     landings = current_institution.landings
-    render json: landings, each_serializer: Api::V1::LandingSerializer, meta: { total_results: landings.size }
+    render json: landings, each_serializer: serializer, meta: { total_results: landings.size }
   end
 
   def show
     landing = Landing.find(params[:id])
-    render_serialized_payload {
-      API.new(landing, serializer_options).serializable_hash
-    }
+    render json: landing, serializer: serializer, meta: { total_themes: landing.landing_themes.size }
+  end
+
+  private
+
+  def serializer
+    Api::V1::LandingSerializer
   end
 end
